fix(ui): DOMA-11097 set transition to 0ms for border-color and background to prevent flickering

--- a/packages/ui/src/components/Switch/style.less
+++ b/packages/ui/src/components/Switch/style.less
@@ -61,6 +61,7 @@
     &::before {
       background: @condo-global-color-gray-5;
       box-shadow: none;
+      transition: background 0ms;
     }
   }
 
@@ -107,6 +108,7 @@
 
   &:hover:not(.condo-switch-disabled) {
     border-color: @condo-global-color-gray-7;
+    transition: border-color 0ms;
   }
 }
 
